Spacing issues

--- a/css/js-master.css
+++ b/css/js-master.css
@@ -220,35 +220,35 @@ img{
 .menu-1{
     text-align: center;
     color:#9BA2FF;
-    padding: 10px;
+    padding: 3px;
     grid-column: 1/2;
     grid-row: 1/1;
 }
 .menu-2{
   text-align: center;
   color:#9BA2FF;
-  padding: 10px;
+  padding: 3px;
   grid-column: 1/2;
   grid-row: 2/2;
 }
 .menu-3{
   text-align: center;
   color:#9BA2FF;
-  padding: 10px;
+  padding: 3px;
   grid-column: 1/2;
   grid-row: 3/3;
 }
 .menu-4{
   text-align: center;
   color:#9BA2FF;
-  padding: 10px;
+  padding: 3px;
   grid-column: 1/2;
   grid-row: 4/4;
 }
 .menu-5{
   text-align: center;
   color:#9BA2FF;
-  padding: 10px;
+  padding: 3px;
   grid-column: 1/2;
   grid-row: 5/5;
 }
@@ -258,7 +258,7 @@ img{
   grid-column: 1/2;
   grid-row: 6/6;
   text-align: center;
-  font-size: 80%;
+  font-size: 60%;
 }
 
 .button{
@@ -275,14 +275,12 @@ img{
 }
 #photo-1{
     margin: 15px 0px 0px 0px;
-    width: 40%;
     grid-column: 1/2;
     grid-row: 9/9;
     align-items: center;
 }
 #photo-2{
     margin: 15px 0px 0px 0px;
-    width: 40%;
     grid-column: 2/3;
     grid-row: 9/9;
     align-items: center;
